updated html file with my full name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Freelancing and Remote Work Bootcamp</title>
 </head>
 <body>
-  <h1>Hello World from Nauman!</h1>
+  <h1>Hello World from Nauman Munir!</h1>
 </body>
 </html>
